package nlsr_message;

message NlsrStatusCoordinateMessage {
  message Name {
    repeated bytes component = 8;
  }

  message OriginRouter {
    required Name origin_router_name = 7;
  }


  message LsaInfo {
    required OriginRouter origin_router = 7;
    required uint64 sequence_number = 130;
    required uint64 expiration_period = 139;
  }

  message CoordinateLsa {
    required LsaInfo lsa_info = 128;
    required double radius = 135;
    required double angle = 136;
  }

  repeated CoordinateLsa coor_lsa = 133;
}